# month-of-ai

./: .gitignore  Cargo.toml  flake.nix
rust/: Cargo.toml  flake.nix
rust/src/: main.rs
rust/src/api/: mod.rs  movies.rs  scraper.rs
rust/src/data/movies/: 10020.json  1008042.json  10096.json  10110.json  10112.json  101299.json  10144.json  10158.json  1018.json  10191.json  10193.json  10198.json  10201.json  10220.json  10229.json  10316.json  103332.json  103731.json  10377.json  10398.json  10400.json  10474.json  10501.json  10528.json  10539.json  10585.json  105864.json  10591.json  106.json  10601.json  10625.json  10634.json  10637.json  10647.json  106646.json  10673.json  10693.json  107.json  10734.json  10776.json  (+907 more)
rust/src/model/: cache.rs  chat_completion_request.rs  chat_completion_response.rs  config.rs  cosine_similarity.rs  mod.rs  movie.rs  open_ai_request.rs  open_ai_response.rs  openai.rs  query.rs
rust/src/model/movies/: mod.rs  movie.rs  movie_embedding.rs
rust/src/util/: mod.rs  movie_helper.rs  response_helper.rs  vector_math_helper.rs
src/data/: topRatedMovies.json
src/data/movies/: 10009.json  10010.json  10024.json  10027.json  100402.json  101.json  10138.json  10189.json  10195.json  10222.json  102651.json  102899.json  103.json  10312.json  10315.json  10331.json  10340.json  10386.json  10439.json  105.json  1051.json  10530.json  10545.json  10559.json  10590.json  10674.json  (+782 more)
src/model/: cache.rs  chat_completion_response.rs  config.rs  embedding_request_body.rs  mod.rs  query.rs
src/util/: mod.rs  tool_helper.rs
(+1 files in other folders)
