[package]
name = "month-of-ai-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-session = { version = "0.9.0", features = ["cookie-session"] }
actix-web = "4.5.1"
env_logger = "0.11.2"
log = "0.4.21"
mime = "0.3.17"
openai-api-rs = "4.0.7"
reqwest = "0.11.24"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
spinners = "4.1.1"
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.1"
uuid = { version = "1.7.0", features = ["v4"] }
